2015-09-26  Kubo Takehiro  <kubo@jiubao.org>
	* ext/dist-files, ext/oci8/extconf.rb, ext/oci8/oci8.h,
	  ext/oci8/oci8lib.c, ext/oci8/osx.c: Revert the previous commit.

2015-09-19  Kubo Takehiro  <kubo@jiubao.org>
	* ext/dist-files, ext/oci8/extconf.rb, ext/oci8/oci8.h,
	  ext/oci8/oci8lib.c, ext/oci8/osx.c: Intercept dlopen issued
	    by libclntsh.dylib to make OCIEnvCreate() work without
	    setting rpath to ruby itself.
	    ** This commit was reverted. **

2015-09-19  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: Use OCI_DIR environmant variable also
	   to check instant client directory on OS X.
	    (github issue #89)

2015-09-19  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.h: Define STRINGIZE macro for rubinius.

2015-09-19  Kubo Takehiro  <kubo@jiubao.org>
	* README.md: Update supported Oracle version.
	* dist-files: Add lib/oci8/check_load_error.rb.
	* ext/oci8/extconf.rb: Reduce the number of #define values.

2015-09-17  Kubo Takehiro  <kubo@jiubao.org>
	* lib/oci8/oci8.rb: Change the driver name displayed in
	    V$SESSION_CONNECT_INFO.CLIENT_DRIVER from "rubyoci8 : VERSION" to
	    "ruby-oci8 : VERSION".
	* test/test_oci8.rb: Fix a test checking the driver name.
	    (github issue #93)

2015-09-13  Kubo Takehiro  <kubo@jiubao.org>
	* NEWS, docs/report-installation-issue.md, ext/oci8/oraconf.rb,
	  lib/oci8/properties.rb, ruby-oci8.gemspec: Fix links to rubyforge.

2015-09-13  Kubo Takehiro  <kubo@jiubao.org>
	* ruby-oci8.gemspec: Use Kernel.load instead of load not to use Gem::Specification.load.

2015-09-13  Kubo Takehiro  <kubo@jiubao.org>
	* .gitignore: Ignore ext/oci8/*.bundle.

2015-09-12  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/lob.c: Add notice that OCI8::LOB is an I/O object and is closed
	    when a associating connection is closed.

2015-09-12  Kubo Takehiro  <kubo@jiubao.org>
	* lib/oci8/oci8.rb: Add ruby-oci8 version to
	    V$SESSION_CONNECT_INFO.CLIENT_DRIVER for Oracle 12.1.0.2 or later.